# catalyst

./: .gitignore  Dockerfile  LICENSE  README.md  catalyst.py  docker-compose.yaml  pyproject.toml
ExampleIG/: sushi-config.yaml
ExampleIG/input/fsh/: MyMedication.fsh  medication.fsh  visit.fsh
catalyst/: __init__.py  _version.py  cli.py  parser.py
docs/: ref.def.md  var.def.md
example/medication/: ATC.codesystem.md  AntiinfektivaVS.valueset.md  MEDICATIONID.var.md  MyMedication.class.md  THER_ANTIINFECTIVES_ATCCODE.var.md  THER_ANTIINFECTIVES_ATCSYSTEM.var.md  THER_ANTIINFECTIVES_DRUGNAME.var.md  THER_ANTIINFECTIVES_END.var.md  THER_ANTIINFECTIVES_START.var.md  VISITID.ref.md  medication.class.md  medication.fsh
example/visit/: visit.class.md
src/catalyst/: __init__.py  cli.py
src/catalyst/generators/: fhir_shorthand.py
